# zawoke

./: .gitignore  Dockerfile  LICENSE  README.md  alpha.py  commands.py  config.py  docker-compose.yml  example_config.py  jokes.json  requirements.txt  zawaken.py  zawoke.py
Beta/: beta.py
Beta/commands/: commands.py
alpha/: alpha.py  commands.py
cogs/: admin.py  commands.py  help.py  memes.py  uptime.py  utils.py
old/: filewithunusedcode.py
rust-rewrite/: Cargo.toml
rust-rewrite/src/: main.rs
rust-rewrite/src/commands/: fun.rs  mod.rs  utilities.rs
src/: alpha.py  config.py  example_secrets.json  requirements.txt
src/cogs/: admin.py  commands.py  owner.py  uptime.py
src/cogs/utils/: uptime.py
